fix dark mode at initial load

--- a/src/styles/post.css
+++ b/src/styles/post.css
@@ -57,6 +57,9 @@
   --color-text-light: #4d525c;
   --color-heading: #2b2f35;
   --color-accent: #d1dce5;
+
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    'Helvetica Neue', Arial, 'Noto Sans', sans-serif;
 }
 
 .dark .mdx {
